--- a/src/main/resources/static/pacientes-alta.html
+++ b/src/main/resources/static/pacientes-alta.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   </head>
   <body>
@@ -19,9 +19,9 @@
       <aside id="sidebar" class="sidebar">
         <div class="d-flex">
           <button id="sidebar-toggle" class="sidebar-toggle" type="button">
-            <i class="lni lni-more-alt toggle-icon"></i>
+            <i class="lni lni-magnifier toggle-icon"></i>
           </button>
-          <div class="sidebar-logo"><a href="/">Inicio</a></div>
+          <div class="sidebar-logo"><a href="./">Inicio</a></div>
         </div>
         <ul class="sidebar-nav">
           <li class="sidebar-item">
@@ -42,12 +42,12 @@
               data-bs-parent="#sidebar"
             >
               <li class="sidebar-item">
-                <a href="/odontologos-alta.html" class="sidebar-link"
+                <a href="./odontologos-alta.html" class="sidebar-link"
                   >Alta Odontólogo</a
                 >
               </li>
               <li class="sidebar-item">
-                <a href="/odontologos-lista.html" class="sidebar-link"
+                <a href="./odontologos-lista.html" class="sidebar-link"
                   >Listar Odontólogos</a
                 >
               </li>
@@ -71,12 +71,12 @@
               data-bs-parent="#sidebar"
             >
               <li class="sidebar-item">
-                <a href="/pacientes-alta.html" class="sidebar-link"
+                <a href="./pacientes-alta.html" class="sidebar-link"
                   >Alta Paciente</a
                 >
               </li>
               <li class="sidebar-item">
-                <a href="/pacientes-lista.html" class="sidebar-link"
+                <a href="./pacientes-lista.html" class="sidebar-link"
                   >Listar Pacientes</a
                 >
               </li>
@@ -100,10 +100,10 @@
               data-bs-parent="#sidebar"
             >
               <li class="sidebar-item">
-                <a href="/turnos-alta.html" class="sidebar-link">Alta Turno</a>
+                <a href="./turnos-alta.html" class="sidebar-link">Alta Turno</a>
               </li>
               <li class="sidebar-item">
-                <a href="/turnos-lista.html" class="sidebar-link"
+                <a href="./turnos-lista.html" class="sidebar-link"
                   >Listar Turnos</a
                 >
               </li>
@@ -241,7 +241,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/sidebar-toggle.js"></script>
-    <script type="module" src="/js/post_paciente.js"></script>
+    <script src="./js/sidebar-toggle.js"></script>
+    <script type="module" src="./js/post_paciente.js"></script>
   </body>
 </html>
